--- a/trunk/Footballquiz/res/values/strings.xml
+++ b/trunk/Footballquiz/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="thuong">Bạn được cộng: +10 Xu</string>
     <string name="text_btnClose">Close</string>
     <string name="text_title_help_dialog">Gợi ý: </string>
-    <string name="tv_continues_title">Continues</string>
+    <string name="tv_continues_title">CONTINUE</string>
     <string name="btn_help_negative">Canncel</string>
     <string name="btn_help_positive">Yes</string>
     <string name="builder_message">Sử dụng tính năng gợi ý Bạn có thể phải mất 20 Xu</string>
