--- a/trunk/Footballquiz/res/values/strings.xml
+++ b/trunk/Footballquiz/res/values/strings.xml
@@ -1,22 +1,22 @@
 <resources>
     
-    <string name="internet_error_msg">Vui lòng kiểm tra cài đặt mạng !!!</string>
+    <string name="internet_error_msg">Please check your internet !!!</string>
 	
     <string name="app_name">Football Quiz</string>
     <string name="slogan">Nothing is impossible</string>
     <string name="congratulations">CONGRATULATION</string>
     <string name="victory">WINNER</string>
-    <string name="vic_info">Bạn đã hoàn thành phần chơi này</string>
-    <string name="dapan">Bạn đã tìm ra đáp án</string>
-    <string name="thuong">Bạn được cộng: +10 Xu</string>
+    <string name="vic_info">You\'ve finished this game</string>
+    <string name="dapan">You\'ve found the anwser</string>
+    <string name="thuong">You are awarded 10 rubies !!!</string>
     <string name="text_btnClose">Close</string>
-    <string name="text_title_help_dialog">Gợi ý: </string>
+    <string name="text_title_help_dialog">Suggestions: </string>
     <string name="tv_continues_title">CONTINUE</string>
     <string name="btn_help_negative">Canncel</string>
     <string name="btn_help_positive">Yes</string>
-    <string name="builder_message">Sử dụng tính năng gợi ý Bạn có thể phải mất 20 Xu</string>
-    <string name="toast_share_message">Bạn được tặng 5 xu cho mỗi lần share !!!</string>
-    <string name="toast_help_error_message">Bạn không đủ xu !!!</string>
+    <string name="builder_message">Using the suggestions you have lost 20 rubies</string>
+    <string name="toast_share_message">you get 5 rubies per share !!!</string>
+    <string name="toast_help_error_message">You do not own enough Rubies!!! !!!</string>
     <string name="desc_jav">This is your string.
   		 This is the second line of your string.\n\n 
   		 Third line of your string.</string>
@@ -35,5 +35,5 @@
     <string name="number_9">9</string>
 	
     
-    <string name="infomartion">Information:</string>
+    <string name="infomartion">Information</string>
 </resources>
