--- a/Footballquiz/res/values/strings.xml
+++ b/Footballquiz/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="btn_help_negative">Canncel</string>
     <string name="btn_help_positive">Yes</string>
     <string name="builder_message">Using the suggestions you have lost 20 rubies</string>
-    <string name="toast_share_message">you get 5 rubies per share !!!</string>
+    <string name="toast_share_message">You get 5 rubies per share !!!</string>
     <string name="toast_help_error_message">You do not own enough Rubies!!! !!!</string>
     <string name="desc_jav">This is your string.
   		 This is the second line of your string.\n\n 
@@ -36,4 +36,9 @@
 	
     
     <string name="infomartion">Information</string>
+    <string name="admire">You\'re too knowledgeable about football</string>
+    <string name="wait">Wait for the next challenge</string>
+    <string name="wonderful">WONDERFUL!</string>
+    <string name="guessed"> You\'ve guessed the word!</string>
+   
 </resources>
